--- a/travis.yml
+++ b/travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 node_js:
-    - 12
+    - 14
 cache:
     directories:
         - node_modules
 script:
-    - npm run build
-    - npm run export
+    - yarn build
+    - yarn export
     - touch out/.nojekyll
 deploy:
     provider: pages
