--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
 	"dependencies": {
 		"@types/react-icons": "^3.0.0",
 		"@types/react-vertical-timeline-component": "^3.0.1",
-		"next": "11.0.1",
+		"next": "^11.1.2",
 		"next-images": "^1.8.1",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"react-vertical-timeline-component": "^3.3.3",
 		"styled-components": "^5.3.0"
